<resources>
    <string name="app_name">app</string>
    <string name="title_activity_login_screen">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mail">E-mail</string>
    <string name="Pass">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="discover">Discover</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about">Let\'s have a look on the history of our team , when we started , the founders of the team , the main Categories of our team ...etc
semi-colon is a specialized team in programming , technologies and its various branches. We started with our page on facebook in 2018 . We were initially a small community .The team was confined to only six people at first(the founders)
.Depending on our efforts this community started to grow. Now , we have over 3000 like on our facebook page and the number of the Team members started to increase.
Our team is divided into several committees . The committees of our team are divided into Electronics , java , python , Web development . also we have Public relations and Human Resources committees.
Our team visited many schools and gave many training sessions and courses
</string>
    <string name="menu_home">About the Team</string>
    <string name="menu_gallery">Members</string>
    <string name="menu_slideshow">Location</string>
    <string name="menu_tools">Events</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log">Log Out</string>
    <string name="share">Share</string>
    <string name="shre2">Share the application</string>
    <string name="whore">Who Are We ?</string>
    <string name="hello">Hello,</string>
    <string name="events">Sorry , there\'s no upcoming events..</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_map_l">Map</string>
    <string name="title_activity_todo_activity">Todo_activity</string>
    <string name="plus">+</string>
    <string name="day">Day</string>
    <string name="task">Task</string>
</resources>
